<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kuliner.KulinerDetail"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kuliner_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginRight="16dp"
                android:src="@color/darkerGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/img_item_stars"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@color/darkerGray"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tv_item_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kuliner_rate"
                    android:layout_gravity="center"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kuliner_detail"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_detail"
                    android:textColor="@color/black"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_set_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/content_detail"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_overview"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/tv_set_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_overview"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="inherit"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>